<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/contact_bg"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".Contact" >

	<LinearLayout
	    android:id="@+id/ll1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@drawable/bg_custom"
	    android:orientation="vertical" >

	    <TextView
	        android:id="@+id/txt_guild"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/app_name"
	        android:background="@drawable/title_custom"
	        android:textColor="@android:color/white" />
		<ScrollView 
		    android:id="@+id/sroll1"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" >
		    <LinearLayout
		        android:id="@+id/ll2"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:paddingBottom="20dp"
		        android:paddingLeft="20dp"
		        android:paddingRight="10dp"
		        android:paddingTop="20dp" >
	
		        <LinearLayout
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >
	
		            <TextView
		                android:id="@+id/tv_fullname"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:text="@string/form_fullname" />
	
		            <EditText
		                android:id="@+id/et_fullname"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:ems="10"
		                android:inputType="textPersonName"
		                android:background="@drawable/et_custom"
		                android:hint="@string/form_fullname_hint"
		                android:layout_marginTop="5dp"
		                android:layout_marginBottom="5dp" >
	
		            </EditText>
		        </LinearLayout>
	
		        <LinearLayout
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >
	
		            <TextView
		                android:id="@+id/tv_phone"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:text="@string/form_phone" />
	
		            <EditText
		                android:id="@+id/et_phone"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:ems="10"
		                android:inputType="phone"
		                android:background="@drawable/et_custom"
		                android:hint="@string/form_phone_hint"
		                android:layout_marginTop="5dp"
		                android:layout_marginBottom="5dp" >
		            </EditText>
		        </LinearLayout>
	
		        <LinearLayout
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >
	
		            <TextView
		                android:id="@+id/tv_email"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:text="@string/form_email" />
	
		            <EditText
		                android:id="@+id/et_email"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:ems="10"
		                android:inputType="textEmailAddress"
		                android:background="@drawable/et_custom"
		                android:hint="@string/form_email_hint"
		                android:layout_marginTop="5dp"
		                android:layout_marginBottom="5dp" >
		            </EditText>
		        </LinearLayout>
	
		        <LinearLayout
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >
	
		            <TextView
		                android:id="@+id/tv_msg"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:text="@string/form_msg" />
		        </LinearLayout>
	
		        <EditText
		            android:id="@+id/et_msg"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:ems="10"
		            android:lines="4"
		            android:inputType="textMultiLine"
		            android:background="@drawable/et_custom"
		            android:hint="@string/form_msg_hint"
					android:layout_marginTop="5dp"
		            android:layout_marginBottom="5dp" />
	
		        <Button
		            android:id="@+id/btn_submit"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/btn_submit"
		            android:background="@drawable/btn_custom"
		            android:textColor="@android:color/white" />
		        
		    </LinearLayout>
		</ScrollView>
	</LinearLayout>
</LinearLayout>